    after which it will be removed.  The warning has ID
    "Octave:quadcc:RelTol-conversion" and can be disabled with

      warning ("off", "Octave:quadcc:RelTol-conversion")

 ** The qr function now returns a standard factorization unless
    explicitly instructed to perform an economy factorization by using a
    final argument of 0.

 ** Text objects now implement the properties "BackgroundColor",
    "EdgeColor", "LineStyle", "LineWidth", and "Margin".

 ** An initial implementation of alpha transparency has been made for
    patch and surface objects.  Printing to svg and pdf is supported.

 ** ishandle now returns true for both graphics handle objects and
    Java objects.  The latter change was made for Matlab compatibility.
    Use ishghandle or isgraphics if it is important not to include Java
    objects.

 ** The following statistical functions have been moved from core
    Octave to the statistics package available from Octave Forge.

    table -> crosstab

 ** Other new functions added in 4.4:

      camlookat
      camorbit
      campos
      camroll
      camtarget
      camup
      camva
      camzoom
      corrcoef
      erase
      getframe
      groot
      gsvd
      hgtransform
      humps
      integral
      integral2
      integral3
      isgraphics
      isstring
      openvar
      quad2d
      repelem
      rticks
      thetaticks
      vecnorm
      xticklabels
      xticks
      yticklabels
      yticks
      zticklabels
      zticks

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.4 and will
    be removed from Octave 4.8 (or whatever version is the second major
    release after 4.4):

      Function             | Replacement
      ---------------------|------------------
      chop                 | sprintf for visual results

 ** The following functions were deprecated in Octave 4.0 and have been
    removed from Octave 4.4.

      allow_noninteger_range_as_index
      bicubic